--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -118,7 +118,7 @@
     <div class="w3-main" style="margin-left: 340px; margin-right: 40px">
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
-        <h1 class="w3-xxxlarge w3-text-red"><b>손민아</b></h1>
+        <h1 class="w3-xxxlarge w3-text-red"><b>손민아씨</b></h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
 
