--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -29,6 +29,14 @@
       h5 {
         font-family: "Poppins", sans-serif;
       }
+      #about,
+      #introduce {
+        text-align: center;
+        font-weight: 600;
+      }
+      #about {
+        color: red;
+      }
       body {
         font-size: 16px;
       }
@@ -40,6 +48,52 @@
       }
       .w3-half img:hover {
         opacity: 1;
+      }
+      .btn.myInfo {
+        background-color: red;
+        color: white;
+        font-weight: 600;
+      }
+      .card.card-body {
+        width: 70%;
+      }
+      .introduceList {
+        width: 100%;
+        display: flex;
+      }
+      .introduceList > div {
+        width: 25%;
+        text-align: center;
+        margin-top: 25px;
+        font-weight: bold;
+        padding: 10px;
+      }
+      span,
+      hr {
+        color: red;
+      }
+      .carouselContainer {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+      }
+      #carouselExampleControls {
+        width: 25%;
+        height: 25%;
+        margin-top: 16px;
+        margin-bottom: 16px;
+      }
+      .carousel-inner {
+        border-radius: 50%;
+      }
+      .info {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        font-size: small;
+      }
+      .info > div {
+        margin-bottom: 10px;
       }
     </style>
   </head>
@@ -132,7 +186,107 @@
         <h1 class="w3-xxxlarge w3-text-red"><b>이진호</b></h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
-      <p>안녕하세요</p>
+      <p></p>
+      <p></p>
+      <div class="introduceContainer">
+        <!-- carousel start -->
+        <div class="carouselContainer">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/ebichu1.png" class="d-block w-100" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="images/ebichu2.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="images/ebichu3.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="carousel-item">
+                <img src="images/ebichu4.gif" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <!-- carousel end -->
+        <h4 id="about">About Me</h4>
+        <h2 id="introduce">Introduce</h2>
+        <div class="introduceList">
+          <div class="profile">
+            <span>프로필</span>
+            <hr />
+            <div class="info">
+              <div>이름 : 이진호</div>
+              <div>성별 : 남</div>
+              <div>MBTI : INFJ</div>
+              <div>생년월일 : 1993.06.18</div>
+              <div>전화번호 : 010-2669-5793</div>
+              <div>이메일 : hosboy93@naver.com</div>
+            </div>
+          </div>
+          <div class="career">
+            <span>커리어</span>
+            <hr />
+            <div class="info">
+              <div>신일고등학교 졸업</div>
+              <div>한국산업기술대학교 졸업</div>
+              <div>KH 정보교육원 수료</div>
+              <div>(주)LIEN 근무</div>
+              <div>더존 5기 교육중..</div>
+            </div>
+          </div>
+          <div class="interesting">
+            <span>관심사</span>
+            <hr />
+            <div class="info">
+              <div>취미 : 독서, 게임, 산책, 시</div>
+              <div>장점 : 침착함</div>
+              <div>좋아하는 것 : 에비츄</div>
+            </div>
+          </div>
+          <div class="skill">
+            <span>스킬</span>
+            <hr />
+            <div class="info">
+              lo
+              <div>Java, JavaScript</div>
+              <div>Oracle</div>
+              <div>Spring</div>
+              <div>Eclipse, VSCode</div>
+              <div>Tomcat, git</div>
+            </div>
+            lo
+          </div>
+        </div>
+      </div>
     </div>
     <script>
       // Script to open and close sidebar
