fix(ljh) : 이미지파일 경로 변경

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -198,16 +198,16 @@
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/ebichu1.png" class="d-block w-100" alt="..." />
+                <img src="img/ebichu1.png" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item">
-                <img src="images/ebichu2.jpg" class="d-block w-100" alt="..." />
+                <img src="img/ebichu2.jpg" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item">
-                <img src="images/ebichu3.jpg" class="d-block w-100" alt="..." />
+                <img src="img/ebichu3.jpg" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item">
-                <img src="images/ebichu4.gif" class="d-block w-100" alt="..." />
+                <img src="img/ebichu4.gif" class="d-block w-100" alt="..." />
               </div>
             </div>
             <button
