feat(ljh) : 올해 목표 추가

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -26,7 +26,7 @@
     <!-- Sidebar/menu -->
     <nav
       class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-      style="z-index: 3; width: 300px; font-weight: bold"
+      style="z-index: 3; width: 250px; font-weight: bold"
       id="mySidebar"
     >
       <br />
@@ -209,6 +209,51 @@
           </div>
         </div>
         <!-- About Me end -->
+      </div>
+      <!-- Goal start -->
+      <div class="goalContainer">
+        <div class="goalTitle">
+          <h4 id="about">This Year's</h4>
+          <h2 id="introduce">Resolution</h2>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="img/company_icon.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">취업하기</h5>
+                <p class="card-text">취업하고 싶어요</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/health_icon.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">건강해지기</h5>
+                <p class="card-text">건강하고 싶어요</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/travle_icon.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">여행 다녀오기</h5>
+                <p class="card-text">여행가고 싶어요</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/meet_icon.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">사람들 많이 만나기</h5>
+                <p class="card-text">사람들 보고 싶어요</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script>
