fix(ljh) : 이미지 경로 변경

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -122,16 +122,32 @@
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/ebichu1.png" class="d-block w-100" alt="..." />
+                <img
+                  src="img/ljh_img/ebichu1.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="img/ebichu2.jpg" class="d-block w-100" alt="..." />
+                <img
+                  src="img/ljh_img/ebichu2.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="img/ebichu3.jpg" class="d-block w-100" alt="..." />
+                <img
+                  src="img/ljh_img/ebichu3.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="img/ebichu4.gif" class="d-block w-100" alt="..." />
+                <img
+                  src="img/ljh_img/ebichu4.gif"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
             </div>
             <button
@@ -219,7 +235,11 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card">
-              <img src="img/company_icon.png" class="card-img-top" alt="..." />
+              <img
+                src="img/ljh_img/company_icon.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">취업하기</h5>
                 <p class="card-text">취업하고 싶어요</p>
@@ -228,7 +248,11 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="img/health_icon.png" class="card-img-top" alt="..." />
+              <img
+                src="img/ljh_img/health_icon.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">건강해지기</h5>
                 <p class="card-text">건강하고 싶어요</p>
@@ -237,7 +261,11 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="img/travle_icon.png" class="card-img-top" alt="..." />
+              <img
+                src="img/ljh_img/travle_icon.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">여행 다녀오기</h5>
                 <p class="card-text">여행가고 싶어요</p>
@@ -246,7 +274,11 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="img/meet_icon.png" class="card-img-top" alt="..." />
+              <img
+                src="img/ljh_img/meet_icon.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">사람들 많이 만나기</h5>
                 <p class="card-text">사람들 보고 싶어요</p>
