feat(ljh) : header 타이틀 글자색 변경

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -92,7 +92,7 @@
         onclick="w3_open()"
         >☰</a
       >
-      <span><b>손송박이</b></span>
+      <span id="titleName"><b>손송박이</b></span>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
