--- a/Group_Page/shs.html
+++ b/Group_Page/shs.html
@@ -8,7 +8,8 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins"
-    />
+      />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <style>
       body,
       h1,
@@ -30,6 +31,49 @@
       .w3-half img:hover {
         opacity: 1;
       }
+      .section-about {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      background-color: white;
+      padding: 80px 0 140px 0;
+      margin: 0 0 140px 0;
+}
+    .section-about h2 {
+      margin: 0 auto 100px;
+      display: inline-block;
+      font-family: "GmarketBold";
+      color: #6a75ca;
+      font-size: 40px;
+    }
+    .txt-about dt {
+      display: inline-block;
+      margin-bottom: 17px;
+      width: 110px;
+      font-size: 22px;
+      font-family: "GmarketBold";
+      color: red;
+    }
+    .txt-about {
+      margin-top: 55px;
+    }
+    .txt-about dd {
+      display: inline-block;
+      font-size: 22px;
+    }
+    .info-about {
+      margin: 0 0 0 60px;
+    }
+    .slide-images {
+      position: relative;
+      display: flex;
+      height: 438px;
+    }
+    .slide-images img {
+      width: 438px;
+      height: 438px;
+    }
+        
     </style>
   </head>
   <body>
@@ -187,25 +231,50 @@
       <div class="w3-container" id="services" style="margin-top: 75px">
         <h1 class="w3-xxxlarge w3-text-red"><b>송하석</b></h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
-        <p>
-          We are a interior design service that focus on what's best for your
-          home and what's best for you!
-        </p>
-        <p>
-          Some text about our services - what we do and what we offer. We are
-          lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat.
-        </p>
-      </div>
 
+      <section class="section-about">
+        <div class="cont-about">
+          <div class="slide-container">
+          </div>
+          <div class="info-about">
+            <div class="slide-images">
+              <img src="img/shs_img/shs.gif" alt="내 사진" class="img-fluid img-thumbnail"/>
+              
+            </div>
+            <dl class="txt-about">
+              <h4 class="display-font-weight self">안녕하세요! 근면성실한 맞춤형 인재를 목표로 하고 있는 개발자입니다.</h3>
+              <div>
+                <dt>이름</dt>
+                <dd>송하석</dd>
+              </div>
+              <div>
+                <dt>생년월일</dt>
+                <dd>95년 2월 8일</dd>
+              </div>
+              <div>
+                <dt>거주지</dt>
+                <dd>서울시 중랑구</dd>
+              </div>
+              <div>
+                <dt>취미</dt>
+                <dd>드라마 시청</dd>
+              </div>
+              <div>
+                <dt>고민</dt>
+                <dd>아침에 앉아서 대중교통 타고싶다ㅠㅠ</dd>
+              </div>
+            </dl>
+            <div class="btn-about">
+              <button class="btn btn-danger" type="button">
+                <img src="src/img/icon-diary.png" alt="" />취미
+              </button>
+              <button class="btn btn-danger" type="button">
+                <img src="src/img/icon-heart.png" alt="" />성격
+              </button>
+            </div>
+          </div>
+        </div>
+      </section> 
       <!-- Designers -->
       <div class="w3-container" id="designers" style="margin-top: 75px">
         <h1 class="w3-xxxlarge w3-text-red"><b>박성환</b></h1>
