feat : small screen top menu style 추가

--- a/Group_Page/psh.html
+++ b/Group_Page/psh.html
@@ -135,7 +135,7 @@
   <!-- Top menu on small screens -->
   <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span><b>손송박이</b></span>
+    <span id="team1" style="color: #fff;"><b>손송박이</b></span>
   </header>
 
   <!-- Overlay effect when opening sidebar on small screens -->
