feat(all) : sidebar, nav titlename 수정

--- a/Group_Page/psh.html
+++ b/Group_Page/psh.html
@@ -112,6 +112,11 @@
         vertical-align: middle;
         margin-right: 8px;
       }
+
+      #titleName {
+        color: white;
+        font-size: large;
+      }
     </style>
   </head>
 
@@ -188,11 +193,18 @@
       <span><b>손송박이</b></span>
     </header>
 
-  <!-- Top menu on small screens -->
-  <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-    <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span id="team1" style="color: #fff;"><b>손송박이</b></span>
-  </header>
+    <!-- Top menu on small screens -->
+    <header
+      class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding"
+    >
+      <a
+        href="javascript:void(0)"
+        class="w3-button w3-red w3-margin-right"
+        onclick="w3_open()"
+        >☰</a
+      >
+      <span id="titleName"><b>손송박이</b></span>
+    </header>
 
     <!-- !PAGE CONTENT! -->
     <div class="w3-main" style="margin-left: 340px; margin-right: 40px">
