--- a/Group_Page/project.html
+++ b/Group_Page/project.html
@@ -50,13 +50,17 @@
       .team1 > div {
         height: 400px;
       }
+      #titleName {
+        color: white;
+        font-size: large;
+      }
     </style>
   </head>
   <body>
     <!-- Sidebar/menu -->
     <nav
       class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-      style="z-index: 3; width: 300px; font-weight: bold"
+      style="z-index: 3; width: 250px; font-weight: bold"
       id="mySidebar"
     >
       <br />
@@ -122,7 +126,7 @@
         onclick="w3_open()"
         >☰</a
       >
-      <span>Company Name</span>
+      <span id="titleName"><b>손송박이</b></span>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
