--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -30,13 +30,18 @@
       .w3-half img:hover {
         opacity: 1;
       }
+
+      #titleName {
+        color: white;
+        font-size: large;
+      }
     </style>
   </head>
   <body>
     <!-- Sidebar/menu -->
     <nav
       class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-      style="z-index: 3; width: 300px; font-weight: bold"
+      style="z-index: 3; width: 250px; font-weight: bold"
       id="mySidebar"
     >
       <br />
@@ -102,7 +107,7 @@
         onclick="w3_open()"
         >☰</a
       >
-      <span>Company Name</span>
+      <span id="titleName"><b>손송박이</b></span>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
