--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -9,7 +9,17 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body,
       h1,
       h2,
@@ -18,15 +28,22 @@
       h5 {
         font-family: "Poppins", sans-serif;
       }
+
+      p {
+        margin: 0;
+        padding: 0;
+      }
       body {
         font-size: 16px;
       }
+
       .w3-half img {
         margin-bottom: -6px;
         margin-top: 16px;
         opacity: 0.8;
         cursor: pointer;
       }
+
       .w3-half img:hover {
         opacity: 1;
       }
@@ -35,8 +52,82 @@
         color: white;
         font-size: large;
       }
+
+      .header {
+        text-align: center;
+        font-size: 4em;
+        margin: 56px 0px 160px 0px;
+      }
+      .content-box {
+        width: 100%;
+        /* border: 1px solid black; */
+      }
+
+      .about {
+        width: 100%;
+        /* border: 1px solid black; */
+        text-align: center;
+        font-size: 3em;
+        color: red;
+      }
+
+      #about {
+        margin: 50px 0px 50px 0px;
+      }
+
+      .info {
+        display: flex;
+        justify-content: space-evenly;
+      }
+      .profile {
+        /* border: 1px solid black; */
+        width: 25%;
+        text-align: center;
+        padding: 0 24px 0 24px;
+      }
+
+      .career {
+        width: 25%;
+      }
+      .career p {
+        margin-bottom: 8px;
+      }
+      .skill {
+        /* border: 1px solid black; */
+        height: 50%;
+        text-align: center;
+      }
+
+      .cerification {
+        /* border: 1px solid black; */
+        height: 50%;
+        text-align: center;
+      }
+      .goal {
+        /* border: 1px solid black; */
+        width: 25%;
+        text-align: center;
+      }
+      .photo > img {
+        width: 100%;
+        margin-bottom: 16px;
+      }
+
+      .infotitle {
+        font-size: 24px;
+        font-weight: 600;
+        margin-bottom: 24px;
+      }
+
+      .photo {
+        text-align: center;
+        font-size: 24px;
+        margin: 50px 0px 50px 0px;
+        font-weight: 600;
+      }
     </style>
   </head>
+
   <body>
     <!-- Sidebar/menu -->
     <nav
@@ -127,248 +218,137 @@
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
 
-      <!-- Photo grid (modal) -->
-      <div class="w3-row-padding">
-        <div class="w3-half">
-          <img
-            src="/w3images/kitchenconcrete.jpg"
-            style="width: 100%"
-            onclick="onClick(this)"
-            alt="Concrete meets bricks"
-          />
-          <img
-            src="/w3images/livingroom.jpg"
-            style="width: 100%"
-            onclick="onClick(this)"
-            alt="Light, white and tight scandinavian design"
-          />
-          <img
-            src="/w3images/diningroom.jpg"
-            style="width: 100%"
-            onclick="onClick(this)"
-            alt="White walls with designer chairs"
-          />
+      <!-- 타이핑 효과 -->
+      <div class="header text">
+        <span id="dynamic" class="text"></span>
+      </div>
+
+      <div class="content-box">
+        <div class="about">
+          <p id="about">ABOUT</p>
         </div>
+        <div class="info">
+          <div class="profile">
+            <div class="photo">
+              <img src="./img/minaci/minaci.png" alt="" />
+            </div>
+            <h3>SON MIN A</h3>
 
-        <div class="w3-half">
-          <img
-            src="/w3images/atrium.jpg"
-            style="width: 100%"
-            onclick="onClick(this)"
-            alt="Windows for the atrium"
-          />
-          <img
-            src="/w3images/bedroom.jpg"
-            style="width: 100%"
-            onclick="onClick(this)"
-            alt="Bedroom and office in one space"
-          />
-          <img
-            src="/w3images/livingroom2.jpg"
-            style="width: 100%"
-            onclick="onClick(this)"
-            alt="Scandinavian design"
-          />
-        </div>
-      </div>
+            <p>010. 6801. 1993</p>
+            <hr />
+            <p>minaci_@naver.com</p>
+            <hr />
+            <p>Gyeonggi-do, Uiwang</p>
+            <hr />
+          </div>
+          <div class="career">
+            <div class="skill">
+              <p class="infotitle">Skill</p>
 
-      <!-- Modal for full size images on click-->
-      <div
-        id="modal01"
-        class="w3-modal w3-black"
-        style="padding-top: 0"
-        onclick="this.style.display='none'"
-      >
-        <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-        <div
-          class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64"
-        >
-          <img id="img01" class="w3-image" />
-          <p id="caption"></p>
-        </div>
-      </div>
-
-      <!-- Services -->
-      <div class="w3-container" id="services" style="margin-top: 75px">
-        <h1 class="w3-xxxlarge w3-text-red"><b>송하석</b></h1>
-        <hr style="width: 50px; border: 5px solid red" class="w3-round" />
-        <p>
-          We are a interior design service that focus on what's best for your
-          home and what's best for you!
-        </p>
-        <p>
-          Some text about our services - what we do and what we offer. We are
-          lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat.
-        </p>
-      </div>
-
-      <!-- Designers -->
-      <div class="w3-container" id="designers" style="margin-top: 75px">
-        <h1 class="w3-xxxlarge w3-text-red"><b>박성환</b></h1>
-        <hr style="width: 50px; border: 5px solid red" class="w3-round" />
-        <p>The best team in the world.</p>
-        <p>
-          We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-        <p><b>Our designers are thoughtfully chosen</b>:</p>
-      </div>
-
-      <!-- The Team -->
-      <div class="w3-row-padding w3-grayscale">
-        <div class="w3-col m4 w3-margin-bottom">
-          <div class="w3-light-grey">
-            <img src="/w3images/team2.jpg" alt="John" style="width: 100%" />
-            <div class="w3-container">
-              <h3>John Doe</h3>
-              <p class="w3-opacity">CEO & Founder</p>
-              <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-                sodales pellentesque elementum.
-              </p>
+              <p>Java, Javascript</p>
+              <p>Oracle</p>
+              <p>Eclipse, VSCode</p>
+              <p>Tomcat, git</p>
+            </div>
+            <div class="cerification">
+              <p class="infotitle">Cerification</p>
+              <p>정보처리기사</p>
+              <p>정보처리산업기사</p>
+              <p>SQLD</p>
+              <p>컴퓨터활용 1급</p>
             </div>
           </div>
-        </div>
-        <div class="w3-col m4 w3-margin-bottom">
-          <div class="w3-light-grey">
-            <img src="/w3images/team1.jpg" alt="Jane" style="width: 100%" />
-            <div class="w3-container">
-              <h3>Jane Doe</h3>
-              <p class="w3-opacity">Designer</p>
-              <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-                sodales pellentesque elementum.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="w3-col m4 w3-margin-bottom">
-          <div class="w3-light-grey">
-            <img src="/w3images/team3.jpg" alt="Mike" style="width: 100%" />
-            <div class="w3-container">
-              <h3>Mike Ross</h3>
-              <p class="w3-opacity">Architect</p>
-              <p>
-                Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-                sodales pellentesque elementum.
-              </p>
-            </div>
+          <div class="goal">
+            <p class="infotitle">Goal</p>
+            <p>📌열심히 배우기</p>
+
+            <p>📌더! 존! 취업하기</p>
+            <p>📌건강 챙기기</p>
           </div>
         </div>
       </div>
 
-      <!-- Packages / Pricing Tables -->
-      <div class="w3-container" id="packages" style="margin-top: 75px">
-        <h1 class="w3-xxxlarge w3-text-red"><b>이진호</b></h1>
-        <hr style="width: 50px; border: 5px solid red" class="w3-round" />
-        <p>
-          Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure
-        </p>
-      </div>
-
-      <div class="w3-row-padding">
-        <div class="w3-half w3-margin-bottom">
-          <ul class="w3-ul w3-light-grey w3-center">
-            <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-            <li class="w3-padding-16">Floorplanning</li>
-            <li class="w3-padding-16">10 hours support</li>
-            <li class="w3-padding-16">Photography</li>
-            <li class="w3-padding-16">20% furniture discount</li>
-            <li class="w3-padding-16">Good deals</li>
-            <li class="w3-padding-16">
-              <h2>$ 199</h2>
-              <span class="w3-opacity">per room</span>
-            </li>
-            <li class="w3-light-grey w3-padding-24">
-              <button
-                class="w3-button w3-white w3-padding-large w3-hover-black"
-              >
-                Sign Up
-              </button>
-            </li>
-          </ul>
+      <div class="photo"><span>Favorite</span></div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img
+              src="./img/minaci/exhibition1.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Exhibition</h5>
+              <p class="card-text">전시회 좋아해요.</p>
+            </div>
+          </div>
         </div>
-
-        <div class="w3-half">
-          <ul class="w3-ul w3-light-grey w3-center">
-            <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
-            <li class="w3-padding-16">Floorplanning</li>
-            <li class="w3-padding-16">50 hours support</li>
-            <li class="w3-padding-16">Photography</li>
-            <li class="w3-padding-16">50% furniture discount</li>
-            <li class="w3-padding-16">GREAT deals</li>
-            <li class="w3-padding-16">
-              <h2>$ 249</h2>
-              <span class="w3-opacity">per room</span>
-            </li>
-            <li class="w3-light-grey w3-padding-24">
-              <button class="w3-button w3-red w3-padding-large w3-hover-black">
-                Sign Up
-              </button>
-            </li>
-          </ul>
+        <div class="col">
+          <div class="card">
+            <img
+              src="./img/minaci/minaci2.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Warning</h5>
+              <p class="card-text">장난치면 물어요.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="./img/minaci/KakaoTalk_20230514_222608802_05.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">담비</h5>
+              <p class="card-text">2살된 내 동생.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="./img/minaci/everland.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">환상의 나라</h5>
+              <p class="card-text">아마존 노래 부를 수 있어요.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./img/minaci/lotto.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Lotto</h5>
+              <p class="card-text">3등 당첨 경험 이력 보유!</p>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- End page content -->
     </div>
 
-    <!-- W3.CSS Container -->
-    <!--
-    <div
-      class="w3-light-grey w3-container w3-padding-32"
-      style="margin-top: 75px; padding-right: 58px"
-    >
-      <p class="w3-right">
-        Powered by
-        <a
-          href="https://www.w3schools.com/w3css/default.asp"
-          title="W3.CSS"
-          target="_blank"
-          class="w3-hover-opacity"
-          >w3.css</a
-        >
-      </p>
-    </div>
-    -->
-
+    <!-- End page content -->
     <script>
-      // Script to open and close sidebar
-      function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-        document.getElementById("myOverlay").style.display = "block";
-      }
+      const content = "Hello I'm Sonmina!";
+      const text = document.getElementById("dynamic");
+      let index = 0;
+      let txt = "";
 
-      function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-        document.getElementById("myOverlay").style.display = "none";
+      function typing() {
+        if (index < content.length) {
+          txt += content[index];
+          text.innerText = txt;
+          index++;
+        }
       }
-
-      // Modal Image Gallery
-      function onClick(element) {
-        document.getElementById("img01").src = element.src;
-        document.getElementById("modal01").style.display = "block";
-        var captionText = document.getElementById("caption");
-        captionText.innerHTML = element.alt;
-      }
+      setInterval(typing, 320);
     </script>
   </body>
 </html>
