--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -89,7 +89,7 @@
         onclick="w3_open()"
         >☰</a
       >
-      <span>Company Name</span>
+      <span id="titleName"><b>손송박이</b></span>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
